Fixed occasional overflow on touchscreens

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -435,19 +435,19 @@ body > aside .book-title small {
     pointer-events: none;
     opacity: 0;
     position: absolute;
-    top: 50%; left: 0; right: 0;
-    -webkit-transform: translateY(-50%) scale(1.7);
-        -ms-transform: translateY(-50%) scale(1.7);
-            transform: translateY(-50%) scale(1.7);
+    top: 50%; left: 50%;
+    -webkit-transform: translate(-50%, -50%) scale(1.7);
+        -ms-transform: translate(-50%, -50%) scale(1.7);
+            transform: translate(-50%, -50%) scale(1.7);
     -webkit-transition: all .3s;
             transition: all .3s;
 }
 .nav-shown #nav {
     pointer-events: all;
     opacity: 1;
-    -webkit-transform: translateY(-50%) scale(1);
-        -ms-transform: translateY(-50%) scale(1);
-            transform: translateY(-50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+        -ms-transform: translate(-50%, -50%) scale(1);
+            transform: translate(-50%, -50%) scale(1);
 }
 #nav a {
     font-size: 1.6em;
